# whoami-rust

./: .drone.yml  Cargo.toml  Dockerfile  README.md
script/: build.sh
src/: main.rs
