[package]
name = "whoami-rust"
version = "0.1.0"
authors = ["kouki <kouki@localhost>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
iron = "0.6.1"
router = "0.6.0"
version = "3.0.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
